@@ -55,6 +55,10 @@ GArray *pick_and_place_parse_file (gerb_file_t *fd);
 
 gerb_image_t *pick_and_place_parse_file_to_image (gerb_file_t *fd);
 
+void
+pick_and_place_parse_file_to_images (gerb_file_t *fd, gerb_image_t **topImage,
+			gerb_image_t **bottomImage);
+
 gboolean pick_and_place_check_file_type (gerb_file_t *fd);
 
 #endif /* PICK_AND_PLACE_H */
